<resources>
    <string name="app_name">Hodgepodge</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_sql">SQLActivity</string>
    <string name="strExecute">执行SQL</string>
    <string name="strAdd">新增</string>
    <string name="strDelete">删除</string>
    <string name="strUpdate">修改</string>
    <string name="strQuery1">数据查询</string>
    <string name="strQuery2">统计查询</string>
    <string name="strQuery3">比较查询</string>
    <string name="strInputSqlHint">update Orders set OrderPrice = 100 where Id = 6</string>
    <string name="strInputSql">请输入SQL语句</string>
    <string name="strErrorSql">执行出错，请检查SQL语句</string>
    <string name="strSuccessSql">执行SQL语句成功</string>
    <string name="strUnableSql">Sorry，还没处理select语句</string>
    <string name="title_activity_animation">Animation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_ywn_news">GetYwnNewsActivity</string>
    <string name="pleace_input_person">请输入联系人</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="sticky_recycler_bt">StickyBt</string>
    <string name="move_recycler_bt">MoveBt</string>

    <string name="bt_dialog">Dialogs</string>
    <string name="narmal_dialog">normal</string>
    <string name="list_dialog">list</string>
    <string name="single_choice_dialog">single choice</string>
    <string name="multi_choice_dialog">multi choice</string>
    <string name="edit_dialog">edit</string>
    <string name="define_dialog">define</string>

    <string name="tab_my">我的</string>
    <string name="tab_food">美食</string>
    <string name="tab_track">足迹</string>
    <string name="tab_strategy">攻略</string>
    <string name="title_activity_bottom_na">BottomNaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
