<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIView.Dialogs.DialogsActivity">
    <Button
        android:id="@+id/bt_normal_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/narmal_dialog"/>
    <Button
        android:id="@+id/bt_list_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_dialog"/>
    <Button
        android:id="@+id/bt_singlechoice_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_choice_dialog"/>
    <Button
        android:id="@+id/bt_multichoice_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_choice_dialog"/>
    <Button
        android:id="@+id/bt_edit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_dialog"/>
    <Button
        android:id="@+id/bt_define_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/define_dialog"/>
</LinearLayout>