<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataParse.SQLite.OrderActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputSqlMsg"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/strInputSqlHint" />

        <Button
            android:id="@+id/executeButton"
            style="@style/GreenBtnTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:text="@string/strExecute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insertButton"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strAdd" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strDelete" />

        <Button
            android:id="@+id/updateButton"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strUpdate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/query1Button"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strQuery1" />

        <Button
            android:id="@+id/query2Button"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strQuery2" />

        <Button
            android:id="@+id/query3Button"
            style="@style/GrayBtnTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/strQuery3" />
    </LinearLayout>

    <TextView
        android:id="@+id/showSQLMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp" />
    <ListView
        android:id="@+id/showDateListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>







</LinearLayout>