<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIView.BottomNavigation.BottomRadioActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabs_rg"
        >
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:id="@+id/tabs_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <RadioButton
            android:id="@+id/strategy_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioGroupButtonStyle"
            android:checked="true"
            android:drawableTop="@drawable/tab_strategy_selector"
            android:text="@string/tab_strategy"
            />
        <RadioButton
            android:id="@+id/food_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioGroupButtonStyle"
            android:drawableTop="@drawable/tab_food_selector"
            android:text="@string/tab_food"
            />
        <RadioButton
            android:id="@+id/track_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioGroupButtonStyle"
            android:drawableTop="@drawable/tab_track_selector"
            android:text="@string/tab_track"
            />
        <RadioButton
            android:id="@+id/my_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioGroupButtonStyle"
            android:drawableTop="@drawable/tab_my_selector"
            android:text="@string/tab_my"
            />
    </RadioGroup>

</RelativeLayout>